added random qoutes + cursor

--- a/src/app/guesstimate/guesstimate.component.html
+++ b/src/app/guesstimate/guesstimate.component.html
@@ -1,6 +1,7 @@
 <div class="sentence-wrapper">
   <app-word 
-    *ngFor="let word of shownWords"
+    *ngFor="let word of shownWords; let i = index"
+    [cursorPosition]="(cursorPosition.wordIndex == i ? cursorPosition.letterIndex : -1)"
     [word]="word">
   </app-word>
 </div>
