--- a/src/app/word/word.component.html
+++ b/src/app/word/word.component.html
@@ -1,3 +1,6 @@
+<!--
+  <div [@listAnimation]="word.length" class="word-wrapper">
+-->
 <div class="word-wrapper">
   <app-letter 
     *ngFor="let letter of word; let i = index"
