--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,10 @@
+* {
+  font-family: 'Courier New', monospace !important;
+}
+
 html, body { 
   height: 100%; 
   margin: 0;
-  font-family: 'Courier New', monospace !important;
   background-color: var(--black);
   overflow: hidden;
 }
