--- a/src/app/guesstimate/guesstimate.component.scss
+++ b/src/app/guesstimate/guesstimate.component.scss
@@ -1,6 +1,25 @@
+.guesstimate-game-wrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
 .sentence-wrapper{
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+}
+
+span {
+  font-weight: bold;
+  display: flex;
+  font-size: 1rem;
+  text-align: center;
+  justify-content: center;
+  line-height: 3rem;
+  color: rgb(190, 190, 190);
 }
