--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <!--<span><span class="green">G</span>ues<span class="green">s</span>tim<span class="green">a</span>te</span>-->
   <span>Guesstimate</span>
+  <!--<app-difficulty-setting></app-difficulty-setting>-->
 </header>
 
